Changes to show the portfolio in english

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body onload="loadContent()" onresize="loadContent()">
 
   <header class="topnav" id="myTopnav" onclick="menuIconAction()">
-    <a href="#home"                               class="active"> Home</a>
-    <a id="button-aboutMe"  href="#aboutMe"  class="not-pressed">Sobre Mi</a>
-    <a id="button-skills"   href="#skills"   class="not-pressed">Habilidades</a>
-    <a id="button-projects" href="#projects" class="not-pressed">Proyectos</a>
-    <a id="button-contact"  href="#contact"  class="not-pressed">Contacto</a>
+    <a href="#home"                               class="active">Home</a>
+    <a id="button-aboutMe"  href="#aboutMe"  class="not-pressed">About Me</a>
+    <a id="button-skills"   href="#skills"   class="not-pressed">Skills</a>
+    <a id="button-projects" href="#projects" class="not-pressed">Projects</a>
+    <a id="button-contact"  href="#contact"  class="not-pressed">Contact Me</a>
     <a href="javascript:void(0);" class="icon" >
       <i class="fa fa-bars"></i>
     </a>
@@ -31,28 +31,29 @@
             <span class="name-span">Nicolas</span>
             <span class="name-span">Marin</span>
           </h1>
-          <p class="name-span" >Desarrollador de software</p>
+          <p class="name-span">Android Developder</p>
         </div>
       </div>
     </section>
 
     <section id="aboutMe-section" onmouseover="onMouseOver(this.id);" onmouseout="onMouseOver(this.id);">
-      <h3 id="aboutMe" class="section-title">Sobre Mi</h3>
-      <p>Soy un programador autodidacta, actualmente enfocado en programar en Android, en busca de un trabajo donde aportar mis conocimientos, obtener mas experiencia y crecer en el área de desarrollo.</p>
+      <h3 id="aboutMe" class="section-title">About Me</h3>
+      <p>I'm an Android Developer with experience working on different kind of projects, both on companies with other professionals and on my own. 
+        I have passion for building new apps or improve existing ones, and I'm always looking to learn new topics to do a better job.</p>
     </section>
     
     <section id="skills-section"  onmouseover="onMouseOver(this.id);" onmouseout="onMouseOver(this.id);">
-      <h3 id="skills" class="section-title">Habilidades</h3>
+      <h3 id="skills" class="section-title">Skills</h3>
       <div id="skills-section-div"></div>
     </section>
     
     <section id="projects-section" onmouseover="onMouseOver(this.id);" onmouseout="onMouseOver(this.id);">
-      <h3 id="projects" class="section-title">Proyectos</h3>
+      <h3 id="projects" class="section-title">Projects</h3>
       <table id="project-section-div"></table>
     </section>
 
     <section id="contact-section" onmouseover="onMouseOver(this.id);" onmouseout="onMouseOver(this.id);">
-      <h3 id="contact" class="section-title">Contacto</h3>
+      <h3 id="contact" class="section-title">Contact Me</h3>
       <div>
         <a href="mailto:nicolasmarin1312@gmail.com" title="Enviar email">
           <i id="mail-icon" class="fas fa-envelope"></i>
