Titles from Contact me section's link changed

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     <section id="contact-section" onmouseover="onMouseOver(this.id);" onmouseout="onMouseOver(this.id);">
       <h3 id="contact" class="section-title">Contact Me</h3>
       <div>
-        <a href="mailto:nicolasmarin1312@gmail.com" title="Enviar email">
+        <a href="mailto:nicolasmarin1312@gmail.com" title="Send email">
           <i id="mail-icon" class="fas fa-envelope"></i>
         </a>
 
-        <a href="https://www.linkedin.com/in/rnicolasmarin" title="Ir al perfil de linkedin">
+        <a href="https://www.linkedin.com/in/rnicolasmarin" title="Go to Linkedin profile">
           <i id="linkedin-icon" class="fab fa-linkedin"></i>
         </a>
         
-        <a href="https://gitlab.com/NicolasMarin" title="Ir al perfil de Gitlab">
+        <a href="https://gitlab.com/NicolasMarin" title="Go to Gitlab profile">
           <i id="gitlab-icon" class="fab fa-gitlab"></i>
         </a>
 
-        <a href="Curriculum.pdf" download title="Descargar curriculum">
+        <a href="Curriculum.pdf" download title="Download resume">
           <i id="resume-icon" class="far fa-file"></i>
         </a>
       </div>
