Changes to show PokeManager

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           <i id="linkedin-icon" class="fab fa-linkedin"></i>
         </a>
         
-        <a href="https://gitlab.com/NicolasMarin" title="Go to Gitlab profile">
+        <!--<a href="https://gitlab.com/NicolasMarin" title="Go to Gitlab profile">
           <i id="gitlab-icon" class="fab fa-gitlab"></i>
-        </a>
+        </a>-->
 
         <a href="Curriculum.pdf" download title="Download resume">
           <i id="resume-icon" class="far fa-file"></i>
