--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="name-span">Nicolas</span>
             <span class="name-span">Marin</span>
           </h1>
-          <p class="name-span">Android Developder</p>
+          <p class="name-span">Android Developer</p>
         </div>
       </div>
     </section>
