Changes on the cv

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i id="gitlab-icon" class="fab fa-gitlab"></i>
         </a>-->
 
-        <a href="Curriculum.pdf" download title="Download resume">
+        <a href="Nicolas Marin Android Developer.pdf" download title="Download resume">
           <i id="resume-icon" class="far fa-file"></i>
         </a>
       </div>
