- 2048 project and skills added - now when clicking the resume button redirects to the one on drive

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i id="gitlab-icon" class="fab fa-gitlab"></i>
         </a>-->
 
-        <a href="Nicolas Marin Android Developer.pdf" download title="Download resume">
+        <a href="https://drive.google.com/file/d/1wiRVx2ha0d1FrgQmv48lpapXaUTWajl_/view" title="Go to Resume">
           <i id="resume-icon" class="far fa-file"></i>
         </a>
       </div>
